@@ -2,6 +2,8 @@ package com.aya.digital.core.util.requestcodes
 
 object RequestCodes {
     const val INSURANCE_LIST_REQUEST_CODE = "INSURANCE_LIST_REQUEST_CODE"
+    const val SPECIALITIES_LIST_REQUEST_CODE = "SPECIALITIES_LIST_REQUEST_CODE"
+    const val LOCATIONS_LIST_REQUEST_CODE = "LOCATIONS_LIST_REQUEST_CODE"
     const val CODE_INPUT_REQUEST_CODE = "CODE_INPUT_REQUEST_CODE"
     const val RESTORE_PASSWORD_REQUEST_CODE = "CODE_INPUT_REQUEST_CODE"
     const val EDIT_PROFILE_REQUEST_CODE = "EDIT_PROFILE_REQUEST_CODE"
